fix(button): Group horizontal alignment

--- a/assets/scss/_components/_button.scss
+++ b/assets/scss/_components/_button.scss
@@ -62,6 +62,7 @@
 		gap: 20px;
 		grid-template-columns: repeat(1, 1fr);
 		grid-template-rows: auto;
+		margin: 0 auto;
 
 		@include bp(min-width, sm) {
 			max-width: 730px;
